# Interpolation

./: .gitignore  CMakeLists.txt  README.md
include/interpolation/: Json.h  Linear.h
src/: Main.cpp
